# DOOM

./: .gitignore  CMakeLists.txt  test_args.c
linuxdoom-1.10/: CMakeLists.txt  ChangeLog  alloca.h  am_map.c  d_items.c  d_items.h  d_main.c  d_net.c  d_net.h  d_player.h  d_think.h  doomdef.h  doomstat.h  doomtype.h  f_finale.c  g_game.c  hu_stuff.c  i_sound.c  i_sound.h  i_system.c  i_video.c  i_video.h  info.c  m_bbox.h  m_menu.c  m_menu.h  m_misc.c  m_swap.h  p_inter.c  p_local.h  p_mobj.c  p_setup.c  p_spec.c  r_arrays.h  r_data.c  r_defs.h  r_draw.c  r_dynamic.c  r_dynamic.h  r_local.h  (+21 more)
linuxdoom-1.10/launcher/: CMakeLists.txt  launcher.c
linuxdoom-1.10/steamworks_sdk_163/sdk/: .gitignore
linuxdoom-1.10/win32/: debug_main.c  discord_rpc_win32.c  discord_rpc_win32.h  doom.rc.in  doom_launcher.c  i_net.c  i_net_stub.c  i_sound_stub.c  i_sound_win32.c  i_system_win32.c  i_video_win32.c  ogg_temp.c  ogg_temp.h  steam_transport.cpp  steam_transport.h
